// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forms: <Error /> matches snapshot 1`] = `
<div>
  <article
    class="css-1g7t4ds-errorContainer-errorContainer"
  >
    Something went wrong
  </article>
</div>
`;

exports[`Forms: <Error.InputError /> matches snapshot 1`] = `
<div>
  <span
    class="css-1wc9q6w-inputError-inputError"
  >
    Something went wrong
  </span>
</div>
`;
